Create docs dto
Move docs to dto


Update handler


Update docs


Update docs
