# src/docs/swagger.yaml
@@ -1,4 +1,24 @@
 definitions:
+  dto.BadReqErrResponse:
+    properties:
+      failed_field:
+        type: string
+      message:
+        type: string
+      value: {}
+    type: object
+  dto.Credential:
+    properties:
+      access_token:
+        example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJodHRwczovL3BiZX...
+        type: string
+      expires_in:
+        example: 3600
+        type: integer
+      refresh_token:
+        example: e7e84d54-7518-4...
+        type: string
+    type: object
   dto.FileResponse:
     properties:
       filename:
@@ -12,12 +32,77 @@ definitions:
     required:
     - refresh_token
     type: object
-  dto.ResponseErr:
+  dto.ResponseBadRequestErr:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/dto.BadReqErrResponse'
+        type: array
+      message:
+        example: Invalid request body
+        type: string
+      status_code:
+        example: 400
+        type: integer
+    type: object
+  dto.ResponseForbiddenErr:
     properties:
       data: {}
       message:
+        example: Insufficiency permission
         type: string
       status_code:
+        example: 403
+        type: integer
+    type: object
+  dto.ResponseGatewayTimeoutErr:
+    properties:
+      data: {}
+      message:
+        example: Connection timeout
+        type: string
+      status_code:
+        example: 504
+        type: integer
+    type: object
+  dto.ResponseInternalErr:
+    properties:
+      data: {}
+      message:
+        example: Internal service error
+        type: string
+      status_code:
+        example: 500
+        type: integer
+    type: object
+  dto.ResponseNotfoundErr:
+    properties:
+      data: {}
+      message:
+        example: Not found
+        type: string
+      status_code:
+        example: 404
+        type: integer
+    type: object
+  dto.ResponseServiceDownErr:
+    properties:
+      data: {}
+      message:
+        example: Service is down
+        type: string
+      status_code:
+        example: 503
+        type: integer
+    type: object
+  dto.ResponseUnauthorizedErr:
+    properties:
+      data: {}
+      message:
+        example: Invalid token
+        type: string
+      status_code:
+        example: 401
         type: integer
     type: object
   dto.UserDto:
@@ -65,15 +150,6 @@ definitions:
         type: string
     required:
     - ticket
-    type: object
-  proto.Credential:
-    properties:
-      accessToken:
-        type: string
-      expiresIn:
-        type: integer
-      refreshToken:
-        type: string
     type: object
   proto.User:
     properties:
@@ -153,11 +229,11 @@ paths:
         "401":
           description: Invalid token
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
         "503":
           description: Service is down
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
       security:
       - AuthToken: []
       summary: Check user status and user info
@@ -181,23 +257,23 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/proto.Credential'
+            $ref: '#/definitions/dto.Credential'
         "400":
           description: Invalid request body
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseBadRequestErr'
         "401":
           description: Invalid refresh token
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
         "500":
           description: Internal service error
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseInternalErr'
         "503":
           description: Service is down
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
       summary: Redeem new token
       tags:
       - auth
@@ -219,15 +295,15 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/proto.Credential'
+            $ref: '#/definitions/dto.Credential'
         "500":
           description: Internal service error
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseInternalErr'
         "503":
           description: Service is down
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
       security:
       - AuthToken: []
       summary: Verify ticket and get credential
@@ -248,19 +324,19 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseBadRequestErr'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
         "503":
           description: Service Unavailable
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
         "504":
           description: Gateway Timeout
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseGatewayTimeoutErr'
       security:
       - AuthToken: []
       summary: Upload the image
@@ -288,23 +364,23 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseBadRequestErr'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseForbiddenErr'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseNotfoundErr'
         "503":
           description: Service Unavailable
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
       security:
       - AuthToken: []
       summary: Create new user
@@ -331,15 +407,15 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseBadRequestErr'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
         "503":
           description: Service Unavailable
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
       security:
       - AuthToken: []
       summary: Create new user if it doesn't exist and Update the user data if exists
@@ -366,23 +442,23 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseBadRequestErr'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseForbiddenErr'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseNotfoundErr'
         "503":
           description: Service Unavailable
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
       security:
       - AuthToken: []
       summary: Delete the user
@@ -408,19 +484,19 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseBadRequestErr'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseNotfoundErr'
         "503":
           description: Service Unavailable
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
       summary: Get the user data by id
       tags:
       - user
@@ -450,23 +526,23 @@ paths:
         "400":
           description: Bad Request
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseBadRequestErr'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseUnauthorizedErr'
         "403":
           description: Forbidden
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseForbiddenErr'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseNotfoundErr'
         "503":
           description: Service Unavailable
           schema:
-            $ref: '#/definitions/dto.ResponseErr'
+            $ref: '#/definitions/dto.ResponseServiceDownErr'
       security:
       - AuthToken: []
       summary: Update the existing user
